# ssserve

./: .gitignore  README.md  asv.conf.json  index.json  info.json  pyproject.toml  regressions.xml  setup.py  theme.css
.asv/results/: benchmarks.json
.asv/results/Prakash/: f4fd93ad-existing-py_mnt_c_Users_Prakash_Documents_work_projects_serve_.venv_bin_python3.json  machine.json
.github/workflows/: benchmarks.yml  bump.yml  pages.yml  publish.yml  tests.yml
benchmarks/: benchmarks.py
graphs/arch-x86_64/branch-main/cpu-AMD Ryzen 9 7900X 12-Core Processor/machine-Prakash/num_cpu-24/os-Linux 5.15.167.4-microsoft-standard-WSL2/python-3.12/ram-15912456/: summary.json
graphs/summary/: benchmarks.TimeFormatDate.time_format.json  benchmarks.TimeFormatSize.time_format.json  benchmarks.TimeMatchGlob.time_list.json  benchmarks.TimeMatchGlob.time_negative.json  benchmarks.TimeMatchGlob.time_simple.json  benchmarks.TimeMergeConfig.time_merge.json  benchmarks.TimeParseByteRange.time_parse.json  benchmarks.TimeParseListen.time_parse.json  benchmarks.TimeRenderListing.time_render.json  benchmarks.TimeRouteToRegex.time_complex.json  benchmarks.TimeRouteToRegex.time_simple.json  benchmarks.TimeRouteToRegex.time_with_param.json  benchmarks.TimeRouteToRegex.time_with_wildcard.json
ssserve/: __main__.py  cli.py  config.py  handler.py  listing.py  network.py
tests/: conftest.py
tests/e2e/: test_behavior.py  test_performance.py  test_resources.py
(+1 files in other folders)
