[project]
name = "ssserve"
version = "0.3.0"
dynamic = ["description"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]
license = "MIT"

[project.scripts]
ssserve = "ssserve.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ssserve"]

[dependency-groups]
dev = [
    "pytest>=8",
    "psutil>=6",
    "asv>=0.6.5",
    "setuptools>=82.0.1",
]
